<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/bg_device_info"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                style="@style/MiddleGrayTextSizeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/history_connect"
                />

            <TextView
                android:id="@+id/tv_clear"
                style="@style/MiddleBlueTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/clear"/>

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_device_list_history_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:overScrollMode="never"
            app:layoutManager="LinearLayoutManager"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                style="@style/MiddleGrayTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/other_device"
                />

            <TextView
                android:id="@+id/tv_refresh"
                style="@style/MiddleBlueTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/refresh"/>

            <ProgressBar
                android:id="@+id/pgb_refresh"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"/>

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_device_list_search_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:overScrollMode="never"
            app:layoutManager="LinearLayoutManager"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>