<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <View
        style="@style/horizontal_parting_line_blue"></View>

    <ImageView
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_login_logo"/>

        <EditText
            android:id="@+id/edt_login_account"
            style="@style/NormalBlackTextSizeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_account"
            android:drawablePadding="15dp"
            android:drawableStart="@mipmap/ic_account"
            android:hint="@string/please_enter_the_login_account"
            android:singleLine="true"
            android:padding="15dp"
            android:textColorHint="@color/hintSearch"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_login_password"
        style="@style/NormalBlackTextSizeStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:drawableLeft="@mipmap/ic_password"
        android:drawablePadding="15dp"
        android:drawableStart="@mipmap/ic_password"
        android:hint="@string/please_enter_the_login_password"
        android:singleLine="true"
        android:padding="15dp"
        android:textColorHint="@color/hintSearch"/>


        <Button
            android:text="@string/login"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/iv_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_rounded_rectangle_blue"/>

</LinearLayout>