<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BaseToolbarStyle"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:navigationIcon="@mipmap/ic_back"
        >

        <TextView
            android:text="@string/device_information"
            android:id="@+id/toolbar_title"
            style="@style/BaseToolbarTitleStyle"/>

        <TextView
            android:padding="10dp"
            android:id="@+id/tv_device_info_state"
            style="@style/NormalBlackTextSizeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            />

    </android.support.v7.widget.Toolbar>

    <View
        style="@style/horizontal_parting_line_blue"></View>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dip">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_device_info_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:overScrollMode="never"
                app:layoutManager="LinearLayoutManager"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    style="@style/MiddleGrayTextSizeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/other_device"
                    />

                <TextView
                    android:id="@+id/tv_refresh"
                    style="@style/MiddleBlueTextSizeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/refresh"/>

                <ProgressBar
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:id="@+id/pgb_refresh"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

            </RelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_device_info_other_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:overScrollMode="never"
                app:layoutManager="LinearLayoutManager"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_device_info_restore"
        style="@style/NormalWhiteTextSizeStyle"
        android:background="@color/textBlue"
        android:text="@string/restore_factory_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>